RG-1797 JPS-8601 fix EUA width on narrow scrrens

--- a/components/user-agreement/user-agreement.css
+++ b/components/user-agreement/user-agreement.css
@@ -1,7 +1,13 @@
-@value unit from '../global/global.css';
+@value unit, extra-small-screen-media from '../global/global.css';
 
 .dialogContent {
-  width: 600px;
+  max-width: 600px;
+
+  @media extra-small-screen-media {
+    & {
+      max-width: 90vw;
+    }
+  }
 }
 
 .scrollableWrapper {
